# swoole-cli

./: .clang-format  .editorconfig  .gitignore  .php-cs-fixer.dist.php  Dockerfile  Dockerfile-old  README.md  build-init-depend.sh  build-prepare-base-container.sh  build-prepare-depend.sh  build-prepare-run-container.sh  build-release-example.sh  composer.json  connection-container.sh  diff.php  library_builder.php  library_install_builder.php  php-version.php  prepare-linux-php-7.php  prepare-macos.php  prepare-test.php  prepare.php  setup-ajax-libs.sh  setup-casdoor-runtime.sh  setup-coturn-runtime.sh  setup-fossflow.sh  setup-nginx-runtime.sh  setup-nix-runtime.sh  setup-openssh-runtime.sh  setup-php-cli-runtime.sh  setup-php-runtime.sh  setup-proxmox-pve.sh  setup-qemu-user-static-runtime.sh  setup-runtime.md  setup-rustfs-runtime.sh  setup-socat-runtime.sh  setup-swoole-docs.sh  setup-swow-cli-runtime.sh  setup-ttyd-runtime.sh  setup-ventoy.sh  (+2 more)
build-tools-script/: download-php-source-code.sh  init-depend.sh  prepare-base-container.sh  run-base-container.sh
build-tools-scripts/: Dockerfile-Dependencies  Dockerfile-alpine  Dockerfile-alpine-all-dependencies  Dockerfile-alpine-dev-1  Dockerfile-alpine-download-library-and-extension  Dockerfile-alpine-swoole-cli-build-dev-all-dependencies  Dockerfile-ubuntu  Dockerfile2  README.md  archive-dist.sh  build-config-php.sh  build-dev-dependencies.sh  build-dev-download-library-extension.sh  (+37 more)
sapi/src/library_builder/cpp/c23-module/: CMakeLists.txt  README.md  archlinux-init.sh  build.sh  docker-compose.yaml  main.cpp
(+358 files in other folders)
